# anchor-nft-ticketing

./: .gitignore  .prettierignore  Anchor.toml  README-tech.md  README.md  package-lock.json  package.json
.github/workflows/: static-analysis.yml  tests.yml
app/front/: .env  .env.example  package-lock.json  package.json
app/front/app/: layout.tsx  page.tsx
app/front/app/create-event/: page.tsx
app/frontend/: .env.example  config-overrides.js  package-lock.json  package.json
app/tickets-swap/: .env.example  config-overrides.js  package-lock.json  package.json  tailwind.config.ts
app/tickets-swap/_OLD/: In_ShowEvent.tsx  tickets_swap_0.29.0.json  tickets_swap_0.30.1.json
app/tickets-swap/app/: globals.css  layout.tsx  page.tsx
app/tickets-swap/public/: manifest.json
app/tickets-swap/src/: App.tsx  index.tsx
app/tickets-swap_react/: config-overrides.js  package-lock.json  package.json
app/tickets-swap_react/public/: index.html
app/tickets-swap_react/src/: index.css
docs/: Localnet-to-Devnet.md  Notes-tech.md
migrations/: deploy.ts
programs/nft-ticketing/: Cargo.toml
programs/nft-ticketing/src/: lib.rs
programs/nft-ticketing/src/kernel/: event_manager.rs  nft_manager.rs  ticket_manager.rs
programs/tickets-swap/: Cargo.toml
programs/tickets-swap/src/: lib.rs
programs/tickets-swap/src/kernel/: mod.rs  nft_manager.rs  ticket_manager.rs
sh/: copy-idl.sh  devnet-to-localnet.sh  ledger-persist.sh  localnet-to-devnet.sh  test-ledger.sh  update-program-id.sh
tests/: create-event.ts  tests.ts  tickets-swap.ts
(+58 files in other folders)
